# RAG-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY_PHASE3.md  DOCKER_GUIDE.md  DOCKER_QUICK_START.md  Dockerfile  GOOGLE_AI_FIX.md  GOOGLE_AI_SETUP.md  PHASE2_FIX_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_2_PLAN.md  PHASE_2_SUMMARY.md  PHASE_3_CHECKLIST.md  PHASE_3_COMPLETE.md  PHASE_3_QUICKSTART.md  PHASE_3_REPORT.md  PHASE_3_SUMMARY.md  PHASE_4_PLAN.md  PHASE_5_COMPLETE.md  PHASE_5_DEPLOYMENT_COMPLETE.md  PHASE_5_PLAN.md  PHASE_5_QUICKSTART.md  PHASE_5_README_UPDATE.md  PHASE_5_VERIFICATION.md  PHASE_6_PLAN.md  PHASE_6_VALIDATION_COMPLETE.md  PHASE_7_FILE_LIST.md  PHASE_7_PLAN.md  PHASE_7_VALIDATION_SUMMARY.md  PHASE_8_PLAN.md  PHASE_9_PLAN.md  PROJECT_STATUS_ANALYSIS.md  QUICK_START_PHASE2.md  README.md  SETUP_GUIDE.md  SETUP_PHASE2.ps1  START_DOCKER.ps1  START_INSTRUCTIONS.md  (+31 more)
.github/workflows/: ci.yml  docker-build.yml
alembic/: README  env.py
alembic/versions/: 20251025_143924_initial_schema.py
app/: __init__.py  config.py  database.py  main.py
app/middleware/: __init__.py  rate_limit.py  security.py
app/models/: __init__.py  base.py  chunk.py  query.py  (+2 more)
docs/: api-examples.md  architecture.md  configuration.md  deployment.md  operations.md
tests/: __init__.py  confhelpers.py  conftest.py  mocks.py  test_api_endpoints.py  test_chunker.py  test_chunking_comprehensive.py  test_config.py  test_embedding_service.py  test_embeddings.py  test_extractors.py  test_extractors_comprehensive.py  test_health.py  test_indexing_integration.py  test_ingestion.py  test_ingestion_integration.py  test_mocks.py  test_models.py  test_pinecone_store.py  test_rag_pipeline.py  test_rag_pipeline_complete.py  test_validators.py  test_validators_comprehensive.py  test_vector_store.py
(+42 files in other folders)
